k8s/alb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-lb-nginx-deployment
spec:
  replicas: 20
  selector:
    matchLabels:
      app: test-lb-nginx
  template:
    metadata:
      labels:
        app: test-lb-nginx
    spec:
      containers:
        - name: nginx
          image: public.ecr.aws/nginx/nginx:1.21
          ports:
            - containerPort: 80
