k8s/alb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-lb-nginx-service
spec:
  selector:
    app: test-lb-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
